Set autoExpandMenus false.

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                             <li class="nav-itemContainer">
                                 <div class="nav-item" onclick="toggleSubMenu('example-project')">
                                     <h1 class="nav-itemHeader">Example Project</h1>
-                                    <div class="nav-toggle " id="subMenuExpandIcon_example-project">
+                                    <div class="nav-toggle open" id="subMenuExpandIcon_example-project">
                                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor"><path d="M0 0h24v24H0z" fill="none"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg>
                                     </div>
-                                    <div class="nav-toggle open" id="subMenuCollapseIcon_example-project">
+                                    <div class="nav-toggle " id="subMenuCollapseIcon_example-project">
                                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"/></svg>
                                     </div>
                                 </div>
-                                <ul class="nav-subMenu open" id="subMenu_example-project">
+                                <ul class="nav-subMenu " id="subMenu_example-project">
                                     
                                         <li class="nav-itemContainer" id="navItemContainer_example-project+getting-started">
     <a class="nav-item" href="#example-project+getting-started">
@@ -86,14 +86,14 @@
                             <li class="nav-itemContainer">
                                 <div class="nav-item" onclick="toggleSubMenu('usage')">
                                     <h1 class="nav-itemHeader">Usage</h1>
-                                    <div class="nav-toggle " id="subMenuExpandIcon_usage">
+                                    <div class="nav-toggle open" id="subMenuExpandIcon_usage">
                                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor"><path d="M0 0h24v24H0z" fill="none"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/></svg>
                                     </div>
-                                    <div class="nav-toggle open" id="subMenuCollapseIcon_usage">
+                                    <div class="nav-toggle " id="subMenuCollapseIcon_usage">
                                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="currentColor"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"/></svg>
                                     </div>
                                 </div>
-                                <ul class="nav-subMenu open" id="subMenu_usage">
+                                <ul class="nav-subMenu " id="subMenu_usage">
                                     
                                         <li class="nav-itemContainer" id="navItemContainer_usage+themes">
     <a class="nav-item" href="#usage+themes">
