Fix broken GitHub link.

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 <p>For this example, let&#39;s begin with a new project.</p>
 <h2 name="example-project+1-get-and-configure-nanodocs+downloading-nanodocs">Downloading NanoDocs<a href="#example-project+1-get-and-configure-nanodocs+downloading-nanodocs" class="markdown-linkIcon"></a></h2><p>NanoDocs is available via npm. To get it, run the following command in the root directory of your project:</p>
 <p><code>npm i nanodocs</code></p>
-<p>Alternatively, you can get the code by cloning the <a href="#">GitHub repo</a>.</p>
+<p>Alternatively, you can get the code by cloning the <a href="https://github.com/patrick-mcgreal-dev/nanodocs">GitHub repo</a>.</p>
 <h2 name="example-project+1-get-and-configure-nanodocs+configuring-nanodocs">Configuring NanoDocs<a href="#example-project+1-get-and-configure-nanodocs+configuring-nanodocs" class="markdown-linkIcon"></a></h2><p>Before writing any documentation, NanoDocs needs to be initialised.</p>
 <p>Run the following command in the root directory of your project:</p>
 <p><code>npx nanodocs init</code></p>
