Update links on introduction page.

--- a/index.html
+++ b/index.html
@@ -171,7 +171,10 @@
 <h2 name="root+introduction+look-and-feel">Look and feel<a href="#root+introduction+look-and-feel" class="markdown-linkIcon"></a></h2><p>NanoDocs ships with multiple themes, each of which supports multiple colour modes and text resizing.</p>
 <p>Take a look at some examples in the <a href="#usage+themes">themes</a> guide.</p>
 <h2 name="root+introduction+getting-started">Getting started<a href="#root+introduction+getting-started" class="markdown-linkIcon"></a></h2><p>To learn how NanoDocs works, try working through the <a href="#example-project+getting-started">example project</a>.</p>
-<p>Alternatively, take a look at the <a href="https://github.com/patrick-mcgreal-dev/nanodocs">GitHub repo</a>.</p>
+<ul>
+<li><a href="https://github.com/patrick-mcgreal-dev/nanodocs">NanoDocs at GitHub</a></li>
+<li><a href="https://www.npmjs.com/package/nanodocs">NanoDocs at npm</a></li>
+</ul>
 
                     </div>
                 
